--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,5 +1,4 @@
-hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,%APPEND% api4.bybutter.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,puzzle.xcxsc.net,mid.zineapi.com,scibug.com,pay.wecut.com,baimiao.uzero.cn,api-weather.andy.works,closet.jinjian.tech,photos.adobe.io,gateway.ergedd.com,yyy.bosum.com,api.v1.esread.com,p.du.163.com,api.vistopia.com.cn,api-sub.meitu.com,api.apphud.com,pgapi.ksmobile.com,xy-viva.kakalili.com, api-chn.rthdo.com,bmall.camera360.com,api-v3.speedtest.cn,iap.etm.tech,iap.etm.tech,iap.etm.tech,tutugushiapi.tutuerge.com
-
+hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,%APPEND% api4.bybutter.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,puzzle.xcxsc.net,mid.zineapi.com,scibug.com,pay.wecut.com,baimiao.uzero.cn,api-weather.andy.works,closet.jinjian.tech,photos.adobe.io,gateway.ergedd.com,yyy.bosum.com,api.v1.esread.com,p.du.163.com,api.vistopia.com.cn,api-sub.meitu.com,api.apphud.com,pgapi.ksmobile.com,xy-viva.kakalili.com,api-chn.rthdo.com,bmall.camera360.com,api-v3.speedtest.cn,iap.etm.tech,iap.etm.tech,iap.etm.tech,tutugushiapi.tutuerge.com,shared.lc-cn-n1-shared.com,service.ilovepdf.com,igetcool-gateway.igetcool.com,
 
 
 //******************************
@@ -29,6 +28,8 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 //谜底时钟
 //图图记账
 //VSCO:照片编辑
+//Widgetsmith+解锁订阅
+//vision-个人OKR目标+解锁订阅
 //*******************************
 
 //②下列软件名字的MITM主机名字为buy.itunes.apple.com
@@ -45,8 +46,12 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 //文件管理器
 //熊掌记- Markdown
 //拼图酱+解锁订阅
+//拼图鸭相机-解锁VIP
 //Focos+解锁订阅
 //印章生成器+解锁订阅
+//米克锁屏+解锁订阅
+//Colorful—Widget+解锁订阅
+//APTV+解锁订阅
 //*******************************
 
 #Apollo-记录你的影视生活
@@ -535,5 +540,44 @@ https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body ht
 #*******************************
 http:\/\/tutugushiapi\.tutuerge\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/abushuiqiangushi.js
 
+#米克锁屏+解锁订阅
+#下载地址：https://is.gd/RZKjWo
+#*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mksp.js
+
+#全能小组件- Quike+解锁订阅
+#下载地址：https://is.gd/Vqtf83
+#*******************************
+^https:\/\/shared\.lc-cn-n1-shared\.com\/1\.1\/classes\/Users url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Quike.js
+
+#Colorful—Widget+解锁订阅
+#下载地址：https://is.gd/5nkGAB
+#*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ColorfulWidget.js
+
+#Widgetsmith+解锁订阅
+#特别说明：可以解锁全家桶💞
+#*******************************
+https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/widgetSmith.js
+
+#LovepDF-PDF+解锁订阅
+#下载地址：https://is.gd/yTNaH0
+#*******************************
+https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lovePdf.js
+
+#少年得到+解锁音频和视频内容
+#特别说明：不显示VIP—可解锁功能
+#*******************************
+^https:\/\/igetcool-gateway\.igetcool\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/sndd.js
+
+#vision-个人OKR目标+解锁订阅
+#下载地址：https://is.gd/X7S0eg
+#*******************************
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/vision.js
+
+#APTV+解锁订阅
+#下载地址：https://is.gd/inlPLD
+#*******************************
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/aptv.js
 
 
