--- a/Quantumult X/Q-Search.conf
+++ b/Quantumult X/Q-Search.conf
@@ -146,10 +146,11 @@
 # bi: 必应
 # bd：百度搜索
 # ddg：DuckDuckGo 搜索
+# wz：无追搜索
 # 无指令则转 Google 搜索
 
 
- hostname=duckduckgo.com
+hostname=duckduckgo.com
 
 #gm   (Google图片)
 ^https:\/\/duckduckgo.com\/\?q=gm\+([^&]+).+ url 302 https://www.google.com/search?&tbm=isch&q=$1
@@ -568,3 +569,7 @@
 
 ^https:\/\/duckduckgo.com\/\?q=([^&]+).+ url 302 https://www.google.com/search?q=$1 
 
+
+# wz xxx (无追搜索)
+#增加无追搜索支持，无追搜索，一个不记录、无追踪，还隐私的搜索引擎。
+^https:\/\/duckduckgo.com\/\?q=wz\+([^&]+).+ url 302 https://www.wuzhuiso.com/s?q=$1
