--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -6,7 +6,7 @@ api.bjxkhc.com,vni.kwaiying.com,m*.bybutter.com,api.vuevideo.net,m2u-api.getkwai
 
 //******************************
 //⚠️如果脚本未解锁成功，请先开启脚本，卸载app，然后重新下载软件使用，还不行的话把脚本放在本地使用哦
-//⚠️强烈建议搭配另一个重写文件一块使用：
+//⚠️强烈建议搭配另一个重写文件一块使用：https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/AD_Gai_pengyuyan.conf
 //更新维护此合集：朱丽叶
 //TG频道群:https://t.me/jianjiaoQUN
 //脚本作者：作者写的脚本上方对应着作者的名字，感谢他们的付出
