--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -49,8 +49,7 @@ hostname= buy.itunes.apple.com,api.revenuecat.com,mp.weixin.qq.com,vip1.kuwo.cn,
 //*******************************
 	
 ###########NobyDa作者###########
-#hostname = mp.weixin.qq.com,vip1.kuwo.cn, p.du.163.com, apigate.zymk.cn, www.luqijianggushi.com, *account.wps.com, *account.wps.cn, origin-prod-phoenix.jibjab.com, xy-viva.kakalili.com, ap*.intsig.net, api.picsart.c*, ios.fuliapps.com, apple.fuliapps.com, *.pipiapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, api.meiease.c*, api.revenuecat.com, pan.baidu.com, bmall.camera360.com, api.polaxiong.com, api-chn.rthdo.com,
-api.bjxkhc.com,vni.kwaiying.com,m*.bybutter.com,api.vuevideo.net,
+#hostname = mp.weixin.qq.com,vip1.kuwo.cn, p.du.163.com, apigate.zymk.cn, www.luqijianggushi.com, *account.wps.com, *account.wps.cn, origin-prod-phoenix.jibjab.com, xy-viva.kakalili.com, ap*.intsig.net, api.picsart.c*, ios.fuliapps.com, apple.fuliapps.com, *.pipiapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, api.meiease.c*, api.revenuecat.com, pan.baidu.com, bmall.camera360.com, api.polaxiong.com, api-chn.rthdo.com,api.bjxkhc.com,vni.kwaiying.com,m*.bybutter.com,api.vuevideo.net,
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -168,8 +167,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 
 
 ###########yqc007作者###########
-#hostname=m2u-api.getkwai.com,www.91gao1.com,gw.aoscdn.com,tagit.hyhuo.com,www.40sishi.com,*.youshu.cc,123.57.195.48,media.deezer.com,ios-api-2.duolingo.cn,121.199.197.35:9293,server.yoyiapp.com,server.yoyiapp.com,subscription.grammarly.com,ios.hfys8.vip,api_2496.kuwo.cn,
-appa.lingdu2019.cn,nomo.dafork.com,notability.com,api.polarisoffice.com,cn.pornhubpremium.com,www.qobuz.com,luping.cushuikeji.cn,api.tidal.com,m.jmtiv.com,*.docer.wps.cn,vipapi.wps.cn,account.wps.cn,*.wallpaperscraft.com,apiios_dq.xiangha.com,i.xinyulib.com.cn,
+#hostname=m2u-api.getkwai.com,www.91gao1.com,gw.aoscdn.com,tagit.hyhuo.com,www.40sishi.com,*.youshu.cc,123.57.195.48,media.deezer.com,ios-api-2.duolingo.cn,121.199.197.35:9293,server.yoyiapp.com,server.yoyiapp.com,subscription.grammarly.com,ios.hfys8.vip,api_2496.kuwo.cn,appa.lingdu2019.cn,nomo.dafork.com,notability.com,api.polarisoffice.com,cn.pornhubpremium.com,www.qobuz.com,luping.cushuikeji.cn,api.tidal.com,m.jmtiv.com,*.docer.wps.cn,vipapi.wps.cn,account.wps.cn,*.wallpaperscraft.com,apiios_dq.xiangha.com,i.xinyulib.com.cn,
 
 #一甜相机解锁会员
 #软件版本：2.9.7
@@ -388,8 +386,7 @@ appa.lingdu2019.cn,nomo.dafork.com,notability.com,api.polarisoffice.com,cn.pornh
 ^https?:\/\/i\.xinyulib\.com\.cn\/api\/querytoken.+ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/XinYuLibraryProCrack.js
 
 ###########I-am-R-E作者###########
-hostname=cad.glodon.com,apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157,biz.caiyunapp.com,cutisanapi.imuuzi.com,api-prod.languagedrops.com,subscription.grammarly.com, auth.grammarly.com,knotesapp.cn,vira.llsapp.com,lvv2.com,app.api.versa-ai.com,app.api.versa-ai.com,1959850262196600.cn-hangzhou.fc.aliyuncs.com,api.meiease.cn,*.wtzw.com,raw.githubusercontent.com,bt.flashdown365.com,api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com,
-i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*,apiios.xiangha.com, 39.97.157.167,			
+#hostname=cad.glodon.com,apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157,biz.caiyunapp.com,cutisanapi.imuuzi.com,api-prod.languagedrops.com,subscription.grammarly.com, auth.grammarly.com,knotesapp.cn,vira.llsapp.com,lvv2.com,app.api.versa-ai.com,app.api.versa-ai.com,1959850262196600.cn-hangzhou.fc.aliyuncs.com,api.meiease.cn,*.wtzw.com,raw.githubusercontent.com,bt.flashdown365.com,api.feidee.net, userapi.feidee.net, tg.feidee.com, community.feidee.com,i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*,apiios.xiangha.com, 39.97.157.167,			
 
 
 # > 解锁Aphrodite会员(2022.01.30)（此脚本会与VSCO脚本起冲突，请放在本地使用）
