--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -208,7 +208,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6JZ1ZmD
 ^https?:\/\/(sc|gongdu)\.youshu\.cc\/(m|w|mp)\/(user\/count|media\/media_info|common\/elite_page_content|(page\/v2\/10010016|item\/subpage_pack_list).+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CellularBookProCrack.js
 
-#克拉壁纸解锁订阅
+#克拉壁纸解锁订阅（与picsew脚本冲突故禁止，如需开启可放本地食用）
 #软件版本：7.2.4
 #下载地址：http://t.cn/AimD5JPZ
 #^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ClarityPaperProCrack.js
@@ -259,10 +259,10 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6xF4Xoq
 ^https?:\/\/api_2496\.kuwo\.cn\/front\/user\/vipstatus$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/KWLongPlayProCrack.js
 
-#LaunchCenter解锁订阅
+#LaunchCenter解锁订阅（与picsew脚本冲突故禁止，如需开启可放本地食用）
 #软件版本：3.2.7
 #下载地址：http://t.cn/A6x1oVq2
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
 
 
 #绅士摄影解锁会员
@@ -293,7 +293,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #Picsew解锁专业版
 #软件版本：3.8.1
 #下载地址：http://t.cn/Aig753CC
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PicsewProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PicsewProCrack.js
 
 #PlaneVPN解锁订阅
 #软件版本：2.4.1【美区商店】
