--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -208,7 +208,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6JZ1ZmD
 ^https?:\/\/(sc|gongdu)\.youshu\.cc\/(m|w|mp)\/(user\/count|media\/media_info|common\/elite_page_content|(page\/v2\/10010016|item\/subpage_pack_list).+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CellularBookProCrack.js
 
-#克拉壁纸解锁订阅（与picsew脚本冲突故禁止，如需开启可放本地食用）
+#克拉壁纸解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：7.2.4
 #下载地址：http://t.cn/AimD5JPZ
 #^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ClarityPaperProCrack.js
@@ -259,10 +259,10 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6xF4Xoq
 ^https?:\/\/api_2496\.kuwo\.cn\/front\/user\/vipstatus$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/KWLongPlayProCrack.js
 
-#LaunchCenter解锁订阅（与picsew脚本冲突故禁止，如需开启可放本地食用）
+#LaunchCenter解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.2.7
 #下载地址：http://t.cn/A6x1oVq2
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
 
 
 #绅士摄影解锁会员
@@ -270,7 +270,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6JhXCBH
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
 
-#NewFace解锁永久会员
+#NewFace解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.3.8
 #下载地址：http://t.cn/A6JBzrWe
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NewFaceFVIPCrack.js
@@ -285,7 +285,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #软件下载：http://t.cn/A6xzJTcN
 #^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
 
-#OldRoll解锁永久会员
+#OldRoll解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.0.2
 #下载地址：http://t.cn/A6J8wJXV
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
@@ -295,7 +295,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/Aig753CC
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PicsewProCrack.js
 
-#PlaneVPN解锁订阅
+#PlaneVPN解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.1【美区商店】
 #下载地址：http://t.cn/AikaZwuP
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
@@ -310,7 +310,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #网站地址：https://shrtm.nu/PornHub
 ^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/PornHubPremiumCrack.js
 
-#QrScanner解锁订阅
+#QrScanner解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：5.4.0
 #下载地址：http://t.cn/A6JLAr5p
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
@@ -328,7 +328,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #软件下载：http://t.cn/A6bwldmq
 ^http?:\/\/luping\.cushuikeji\.cn\/api\/v1\.user\/info url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/RecordScreenProCrack.js
 
-#ScannerAir解锁订阅
+#ScannerAir解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.0
 #下载地址：http://t.cn/A6i2Odbx
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
@@ -344,7 +344,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：http://t.cn/A6JZS4a0
 #^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ToToWalletFProCrack.js
 
-#TOK CAM解锁永久订阅
+#TOK CAM解锁永久订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.8.43
 #下载地址：http://t.cn/A6iHacBq
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
@@ -354,7 +354,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #下载地址：https://shrtm.nu/stbfq
 ^https?:\/\/m\.jmtiv\.com\/video\/user\/login$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ViewPlayerFProCrack.js
 
-#VLLO解锁订阅
+#VLLO解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：7.11.1
 #下载地址：http://t.cn/A6A8imIz
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
