--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -262,7 +262,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #LaunchCenter解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.2.7
 #下载地址：http://t.cn/A6x1oVq2
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LaunchCenterProCrack.js
 
 
 #绅士摄影解锁会员
@@ -273,7 +273,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #NewFace解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.3.8
 #下载地址：http://t.cn/A6JBzrWe
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NewFaceFVIPCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NewFaceFVIPCrack.js
 
 #NoMo Cam 解锁订阅
 #软件版本：1.5.131
@@ -288,7 +288,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #OldRoll解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.0.2
 #下载地址：http://t.cn/A6J8wJXV
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
 
 #Picsew解锁专业版
 #软件版本：3.8.1
@@ -298,7 +298,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #PlaneVPN解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.1【美区商店】
 #下载地址：http://t.cn/AikaZwuP
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
 
 #Polaris Office解锁订阅
 #软件版本：9.6.1
@@ -313,7 +313,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #QrScanner解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：5.4.0
 #下载地址：http://t.cn/A6JLAr5p
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
 
 #Qobuz解锁Hi-Res订阅
 #软件版本：6.6.0
@@ -331,7 +331,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #ScannerAir解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.0
 #下载地址：http://t.cn/A6i2Odbx
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
 
 #TIDAL解锁HiFi Plus
 #软件版本：2.48.0【美区下载】
@@ -347,7 +347,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #TOK CAM解锁永久订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.8.43
 #下载地址：http://t.cn/A6iHacBq
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
 
 #视图播放器解锁永久特权
 #软件版本：1.6.0
@@ -357,7 +357,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #VLLO解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：7.11.1
 #下载地址：http://t.cn/A6A8imIz
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
 
 #WPS解锁稻壳会员
 #软件版本：11.26.0
@@ -390,8 +390,8 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 
 
 # > 解锁Aphrodite会员(2022.01.30)（此脚本会与VSCO脚本起冲突，请放在本地使用）
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Aphrodite.js
-^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Aphrodite.js
+#^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Aphrodite.js
+#^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Aphrodite.js
 
 # > CAD快速看图VIP(2022.02.11)
 # > > 此脚本用到了HTTPBackend,获取技术支持需加入群组https://t.me/yqc_123
