--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -34,7 +34,7 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 
 //②下列软件名字的MITM主机名字为buy.itunes.apple.com
 //为避免重复使用在上方hostname里面只有一个请悉知
-//Pandora-管理你的订阅
+//Pandora-管理你的订阅(放本地使用）
 //Picsew滚动截图
 //Proknockout扣图神器
 //https抓包
