--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -132,7 +132,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #^https?:(.+).aoscdn.com/app/aimage/usersInfo$ url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/arkt.js
 
 #波波视频
-http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zhuliyer/ADGai-nai@master/Quantumult%20X/Scripts/bobo
+#http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zhuliyer/ADGai-nai@master/Quantumult%20X/Scripts/bobo
 
 # keep解锁会员
 ^https://(.+).gotokeep.com(/athena/v5/people/my|/nuocha/plans) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/keep
@@ -288,7 +288,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #OldRoll解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.0.2
 #下载地址：http://t.cn/A6J8wJXV
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
 
 #Picsew解锁专业版
 #软件版本：3.8.1
@@ -313,7 +313,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #QrScanner解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：5.4.0
 #下载地址：http://t.cn/A6JLAr5p
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
 
 #Qobuz解锁Hi-Res订阅
 #软件版本：6.6.0
@@ -331,7 +331,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #ScannerAir解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.0
 #下载地址：http://t.cn/A6i2Odbx
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
 
 #TIDAL解锁HiFi Plus
 #软件版本：2.48.0【美区下载】
@@ -347,7 +347,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #TOK CAM解锁永久订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.8.43
 #下载地址：http://t.cn/A6iHacBq
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
 
 #视图播放器解锁永久特权
 #软件版本：1.6.0
@@ -357,7 +357,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 #VLLO解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：7.11.1
 #下载地址：http://t.cn/A6A8imIz
-#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
 
 #WPS解锁稻壳会员
 #软件版本：11.26.0
@@ -657,7 +657,7 @@ https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php ur
 #^https:\/\/.*\.adobe\..*\/mobile_profile\/nul\/v\d$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ps.js
 	
 # > 财新周刊（20210320） by ddgksf2013
-http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
+#http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
 	
 # > 医考帮（20210313） by ddgksf2013
 https://api.yikaobang.com.cn/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ykb.js
@@ -949,7 +949,7 @@ https:\/\/api\.lennou\.com\/user\/info url script-response-body https://raw.ev2.
 ^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/vspro.js
 
 #Python Ai解锁会员
-^http:\/\/ws\.60he\.com\/(book|user).+ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/pyai.js
+#^http:\/\/ws\.60he\.com\/(book|user).+ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/pyai.js
 
 #汉堡儿童睡前故事
 ^https:\/\/www\.babybooks\.top\/v0\/profile url script-response-body https://gjds.vip/QX/pojie/sqgs.js
