--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -381,8 +381,8 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 ^https?:\/\/apiios_dq\.xiangha\.com\/v4\/(dish\/info|User\/getUserData)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/XiangHaBakeProCrack.js
 
 #新语听书解锁会员
-软件版本：4.2.9
-下载地址：http://t.cn/A6xkFpuX
+#软件版本：4.2.9
+#下载地址：http://t.cn/A6xkFpuX
 ^https?:\/\/i\.xinyulib\.com\.cn\/api\/querytoken.+ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/XinYuLibraryProCrack.js
 
 ###########I-am-R-E作者###########
