--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -288,7 +288,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #OldRoll解锁永久会员（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：3.0.2
 #下载地址：http://t.cn/A6J8wJXV
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/OldRollFVIPCrack.js
 
 #Picsew解锁专业版
 #软件版本：3.8.1
