--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -313,7 +313,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #QrScanner解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：5.4.0
 #下载地址：http://t.cn/A6JLAr5p
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/QRCodeScanProCrack.js
 
 #Qobuz解锁Hi-Res订阅
 #软件版本：6.6.0
