--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -331,7 +331,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #ScannerAir解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：2.4.0
 #下载地址：http://t.cn/A6i2Odbx
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ScannerAirProCrack.js
 
 #TIDAL解锁HiFi Plus
 #软件版本：2.48.0【美区下载】
@@ -347,7 +347,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #TOK CAM解锁永久订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：1.8.43
 #下载地址：http://t.cn/A6iHacBq
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TokCamFProCrack.js
 
 #视图播放器解锁永久特权
 #软件版本：1.6.0
@@ -357,7 +357,7 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 #VLLO解锁订阅（脚本冲突故禁止此脚本，如需开启可放本地食用）
 #软件版本：7.11.1
 #下载地址：http://t.cn/A6A8imIz
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
 
 #WPS解锁稻壳会员
 #软件版本：11.26.0
