--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -483,7 +483,7 @@ http:\/\/yyy\.bosum\.com\/enterprise url script-response-body https://raw.github
 #看理想-看见另一种可能+解锁VIP
 #下载地址：https://is.gd/CjkkBS
 #*******************************
-^https:\/\/api\.vistopia\.com\.cn\/api url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/kanlixiang.js
+^https:\/\/api\.vistopia\.com\.cn url script-request-header https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/kanlixiang.js
 
 #Wink-像修图一样修视频+解锁VIP
 #下载地址：https://is.gd/o3yZv8
