--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -292,6 +292,11 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/external/Q
 #百度贴吧重定向
 ^https?+:\/\/(?:c\.)?+tieba\.baidu\.com\/(?>f|p) url request-header (\r\n)User-Agent:.+ request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.4 Safari/605.1.15
 
+# YouTube去广告-qx(>=iOS15)
+# 去首页瀑布流广告/播放页推荐列表广告(非贴片广告)
+# 仓库地址 https://github.com/app2smile/rules
+^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next)\? url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js
+
 ###########id77作者###########
 #hostname= zhuanlan.zhihu.com,m.weibo.cn,
 
