--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -295,7 +295,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/external/Q
 # YouTube去广告-qx(>=iOS15)
 # 去首页瀑布流广告/播放页推荐列表广告(非贴片广告)
 # 仓库地址 https://github.com/app2smile/rules
-^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next)\? url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js
+#^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next)\? url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js
 
 ###########id77作者###########
 #hostname= zhuanlan.zhihu.com,m.weibo.cn,
@@ -511,6 +511,16 @@ ctier=[A-Z] url 302 ctier=A
 ^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
 ^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+
+#!name=去除 Youtube 广告 
+#!desc=去除 Youtube 广告（Beta）
+# IOS > 15
+# 删除 瀑布流、视频、搜索中出现的广告和Shorts，
+# 删除 Shorts 内的视频广告
+# 广告信息可能有遗漏，可能偶现广告
+# inspired by @Choler & @DivineEngine & @app2smile
+^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence) url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube.js
+^https?:\/\/[\w-]+\.googlevideo\.com\/initplayback.+&oad url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-fake.js
 
 #直接进入QQ邮箱不用再下载查看⏬
 ^https://w.mail.qq.com/cgi-bin/readtemplate url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/qqmail1.js
