--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -130,7 +130,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 # ～ 目录广告@ddgksf2013
 ^https?:\/\/47\.100\.65\.202\/api\/mobile\/index\.php\?version=\d&mobile=yes&module=basicdata&type=forumlist url response-body adv response-body ddgksf2013
 # ～ 帖子内卡片及悬浮视频广告@ddgksf2013
-^https?:\/\/47\.100\.65\.202\/source\/plugin\/mobile\/mobile\.php\?module=threadpost&.+?&page=1 url script-response-bodyhttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/fly.js
+^https?:\/\/47\.100\.65\.202\/source\/plugin\/mobile\/mobile\.php\?module=threadpost&.+?&page=1 url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/fly.js
 
 # > 刪除微博開屏廣告@cherish
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_launch.js
