--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -612,13 +612,13 @@ https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-b
 https://xunji.implements.io/whole_user_info url response-body vipDay":0 response-body vipDay":360
 	
 # > hyperweb by abc
-^https://zy6kcqa01a.execute-api.us-east-2.amazonaws.com/prod/verifyReceipt url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/hyperweb.js
+^https://zy6kcqa01a.execute-api.us-east-2.amazonaws.com/prod/verifyReceipt url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/hyperweb.js
 	
 # > B612咔叽 by ddgksf2013
-#https://user-kaji-api.b612kaji.com/v1/purchase/subscription/subscriber/status url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/612.js
+#https://user-kaji-api.b612kaji.com/v1/purchase/subscription/subscriber/status url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/612.js
 	
 # > 酷我音乐解除下载权限 by ddgksf2013
-#^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver=\d url script-request-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/kuwodl.js
+#^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver=\d url script-request-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/kuwodl.js
 	
 # > 通话录音（20210625）by ddgksf2013
 http://micro-tool-api.lyaway.com/* url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/thly.js
@@ -678,8 +678,8 @@ https://xianbeikeji.com/daily/app/user/query url script-response-body https://gi
 https://xrckeji.com/itally/app/user/query url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/mzjz.js
 	
 # > Scanner （20201219） by ddgksf2013
-#^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/scannerpro.js
-#^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/scannerpro.js
+#^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/scannerpro.js
+#^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/scannerpro.js
 
 # > 圈子记账 （20201214） by ddgksf2013
 https://quanzi.jizhangapp.com/* url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/qzjz.js
@@ -778,16 +778,16 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/moo.js
 
 # > varlens(20220202) by ddgksf2013
-^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/varlens.js
+^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/raw/master/Crack/varlens.js
 
 # > 儿歌点点(20220208) by ddgksf2013
-http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/egdd.js
+http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-bodyhttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/egdd.js
 
 # > Cutisan（20220130）by ddgksf2013
-https://cutisanapi.imuuzi.com/api/Home/index url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/cutisan.js
+https://cutisanapi.imuuzi.com/api/Home/index url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/cutisan.js
 
 # > Mix（20220201）by ddgksf2013
-^https:\/\/bmall\.camera360\.com\/api\/(iap\/check-receipt$|mix\/getinfo$) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/mix.js
+^https:\/\/bmall\.camera360\.com\/api\/(iap\/check-receipt$|mix\/getinfo$) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/mix.js
 
 # > RNI解锁高级会员（20220212）@ddgksf2013
 https://pro-status-service-prod.azurewebsites.net/api/item url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/rf.js
