--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -377,9 +377,28 @@ https://homefront.qunar.com/front/splash/ad url reject
 
 # > 人人视频@ddgksf2013
 ^https?:\/\/img.rr.tv\/banner\/.+.jpg url reject
-^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/rrtv.js
-^https:\/\/api\.rr\.tv\/ad\/getAll url script-response-body hhttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/rrtv.js
-^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/rrtv.js
+# ～ RRTV_level_info@ddgksf2013
+^https?:\/\/api\.rr\.tv\/\w{3}\/level\/info url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_屏蔽軟件更新@ddgksf2013
+^https?:\/\/api\.rr\.tv\/.*?Version url reject
+# ～ RRTV_去除首頁廣告@ddgksf2013
+https://api.rr.tv/v3plus/index/channel\?pageNum=1&position=CHANNEL_INDEX url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_去除廣場tab@ddgksf2013
+^https?:\/\/api\.rr\.tv\/app\/config\/h5NativeBar url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_去除商城廣告@ddgksf2013
+^https?:\/\/api\.rr\.tv\/v3plus\/index\/channel\?pageNum=1&position=CHANNEL_MY url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_Ad_List@ddgksf2013
+^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_Ad_All@ddgksf2013
+^https:\/\/api\.rr\.tv\/ad\/getAll url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_Get_Drama@ddgksf2013
+^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_Watch_V4@ddgksf2013
+https://api.rr.tv/watch/v4 url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_User_Info@ddgksf2013
+https://api.rr.tv/user/profile url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/rrtv_json.js
+# ～ RRTV_屏蔽限時彈窗@ddgksf2013
+https://api.rr.tv/storage/business/rootName/app/homePage\?dataType=JSON url reject-dict
 ^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=\w+(.+) url 302 https://api.rr.tv/drama/app/get_combined_drama_detail?$1quality=AI_OD$2
 
 # > 嘀嗒出行
