--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -558,10 +558,10 @@ https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVe
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/supervpnpro.js
 
 # > Lake解鎖會員權限（2022-04-20）@ddgksf2013
-https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script-echo-response https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/lakepro.js
+https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/lakepro.js
 
 # > Nicegram解鎖會員權限（2022-04-10）@ddgksf2013
-https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-response https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/nicegram_body.js
+https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-responsehttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/nicegram_body.js
 
 # > appraven美化（2022-03-23）@ddgksf2013
 ^https?:\/\/appraven\.net\/AppRaven\/(app|social|buy) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/appraven.js
@@ -600,13 +600,13 @@ https?:\/\/bookapi\.ellabook\.cn\/rest\/api\/service$ url script-response-body h
 https://pro-status-service-prod.azurewebsites.net/api/item url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/rf.js
 
 # > 儿歌点点(2022-02-08) by ddgksf2013
-#http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/egdd.js
+#http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/egdd.js
 
 # > varlens(2022-02-02) by ddgksf2013
-^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/varlens.js
+^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/varlens.js
 
 # > 钱迹（20220125）by ddgksf2013	
-https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/qj.js
+https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/qj.js
 
 # > 训记 (20220125) by ddgksf2013
 https://xunji.implements.io/whole_user_info url response-body vipDay":0 response-body vipDay":360
