--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -546,7 +546,7 @@ https://api.rr.tv/user/profile url script-response-body https://gitlab.com/ddgks
 https://api.rr.tv/storage/business/rootName/app/homePage\?dataType=JSON url reject-dict
 
 # > 醒图&Ulike&轻颜相机&vaporcam 解鎖會員權限（2022-05-09）@ddgksf2013
-https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVerifyReceipt.php|v1/subscription/user_info) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/commerce.js
+https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVerifyReceipt.php|v1/subscription/user_info) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/commerce.js
 
 # > 堆糖解鎖會員權限（2022-05-05）@ddgksf2013
 ^https?:\/\/www\.duitang\.com\/napi\/vienna\/graphic\/template url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/duitangpro.js
