--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -561,7 +561,7 @@ https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVe
 https?:\/\/revenuecat\.lakecoloring\.com\/v\d\/(receipts|subscribers) url script-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/lakepro.js
 
 # > Nicegram解鎖會員權限（2022-04-10）@ddgksf2013
-https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-responsehttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/nicegram_body.js
+https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/nicegram_body.js
 
 # > appraven美化（2022-03-23）@ddgksf2013
 ^https?:\/\/appraven\.net\/AppRaven\/(app|social|buy) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/appraven.js
@@ -781,7 +781,7 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 ^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/raw/master/Crack/varlens.js
 
 # > 儿歌点点(20220208) by ddgksf2013
-http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-bodyhttps://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/egdd.js
+http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/egdd.js
 
 # > Cutisan（20220130）by ddgksf2013
 https://cutisanapi.imuuzi.com/api/Home/index url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/cutisan.js
