--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -778,7 +778,7 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/moo.js
 
 # > varlens(20220202) by ddgksf2013
-^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/raw/master/Crack/varlens.js
+#^https?:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/varlens.js
 
 # > 儿歌点点(20220208) by ddgksf2013
 http:\/\/gateway\.ergedd\.com\/dduser\/user\/center\/set url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/egdd.js
