--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -453,9 +453,9 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 ^https?:\/\/(api-\w+|xiaoshuo)\.wtzw\.com\/api\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/QiMaoXiaoShuo.js
 
 # > SaveFile下载限制(2022.01.15)
-^https?:\/\/raw\.githubusercontent\.com\/koanapple\/lock_checker\/main\/ConfigSaveFrom\.json$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/SaveFile.js
+#^https?:\/\/raw\.githubusercontent\.com\/koanapple\/lock_checker\/main\/ConfigSaveFrom\.json$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/SaveFile.js
 # > SaveFile LifeTime会员(2022.01.15)
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/SaveFilePro.js
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/SaveFilePro.js
 
 # > 闪电下载(2022.01.17)
 #一直点小房子按钮，知道出现下方时间显示2030年
